Added historical backlog collection

--- a/example.env
+++ b/example.env
@@ -1,5 +1,10 @@
 LOGGER.LOG_LEVEL=INFO
 LOGGER.NAME=Exhange Rate Collection API
+LOGGER.JSON_FILE_PATH=./logging/default.log.json
+
+JOB.TYPE=NIGHTLY # HISTORICAL/NIGHTLY
+JOB.HISTORICAL_END_DATE=2023-01-01
+JOB.HISTORICAL_PREVIOUS_DAYS=0
 
 POSTGRES.HOST=
 POSTGRES.PORT=5432
