--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 LOGGER.LOG_LEVEL=INFO
-LOGGER.NAME=Exhange Rate Collection API
+LOGGER.NAME=Exchange Rate Collection Job
 LOGGER.JSON_FILE_PATH=./logging/default.log.json
 
 JOB.TYPE=NIGHTLY # HISTORICAL/NIGHTLY
@@ -8,6 +8,6 @@ JOB.HISTORICAL_PREVIOUS_DAYS=0
 
 POSTGRES.HOST=
 POSTGRES.PORT=5432
-POSTGRES.DATABASE=lace_analytics
+POSTGRES.DATABASE=
 POSTGRES.USERNAME=
 POSTGRES.PASSWORD=
