--- a/example.env
+++ b/example.env
@@ -5,6 +5,7 @@ LOGGER.JSON_FILE_PATH=./logging/default.log.json
 JOB.TYPE=NIGHTLY # HISTORICAL/NIGHTLY
 JOB.HISTORICAL_END_DATE=2023-01-01
 JOB.HISTORICAL_PREVIOUS_DAYS=0
+JOB.BASE_CURRENCY=USD
 
 POSTGRES.HOST=
 POSTGRES.PORT=5432
