Added .env comments

--- a/example.env
+++ b/example.env
@@ -2,9 +2,12 @@ LOGGER.LOG_LEVEL=INFO
 LOGGER.NAME=Exchange Rate Collection Job
 LOGGER.JSON_FILE_PATH=./logging/default.log.json
 
-JOB.TYPE=NIGHTLY # HISTORICAL/NIGHTLY
+# Possible Job Types [HISTORICAL, NIGHTLY]
+JOB.TYPE=NIGHTLY
+# HISTORICAL optional only needed when in HISTORICAL mode
 JOB.HISTORICAL_END_DATE=2023-01-01
 JOB.HISTORICAL_PREVIOUS_DAYS=0
+# Reference ./src/client/ExchangeRateHost for Base Currency options
 JOB.BASE_CURRENCY=USD
 
 POSTGRES.HOST=
