Added ability to select timezone the job is based in

--- a/example.env
+++ b/example.env
@@ -9,6 +9,8 @@ JOB.HISTORICAL_END_DATE=2023-01-01
 JOB.HISTORICAL_PREVIOUS_DAYS=0
 # Reference ./src/client/ExchangeRateHost for Base Currency options
 JOB.BASE_CURRENCY=USD
+# Timezone you want the job to run in
+JOB.TIMEZONE=US/Eastern
 
 POSTGRES.HOST=
 POSTGRES.PORT=5432
